--- a/docs/articles/lectures/21_MultiOcc/21_MultiOcc.Rmd
+++ b/docs/articles/lectures/21_MultiOcc/21_MultiOcc.Rmd
@@ -28,12 +28,11 @@ source(here::here("R/zzz.R"))
 ```
 ## Readings
 
-> 
-
+> Guillera-Arroita G, Kéry M, Lahoz-Monfort JJ. Inferring species richness using multispecies occupancy modeling: Estimation performance and interpretation. Ecol Evol. 2019 Feb 5;9(2):780-792. doi: 10.1002/ece3.4821. PMID: 30766668; PMCID: PMC6362448.
 
 > Devarajan, K., Morelli, T.L. and Tenan, S. (2020), Multi-species occupancy models: review, roadmap, and recommendations. Ecography, 43: 1612-1624. https://doi.org/10.1111/ecog.04957
 
-> 
+> Tingley MW, Nadeau CP, Sandor ME. Multi-species occupancy models as robust estimators of community richness. Methods Ecol Evol. 2020; 11: 633–642. https://doi.org/10.1111/2041-210X.13378
 
 ---
 ## Multi-Species Occupancy Models
